integrando gffGeneStats.pl con gffRapeLib.pm. not working yet.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
 # TO-DO list
 
 * gffextract.pl : an option like -l, but which recognize mRNA IDs. looks like most people use it, because it is possible to differentiate isoforms.
+
+# Ideas
+#
+# . filter tags, using regular expressions.
+# . add tags
+# . calculate statistics and add to GFF3
+# . facilitate tab -> gff conversion 
+# . 
